# Co-Sight

./: .env_template  .gitignore  CoSight.py  VISUALIZATION_README.md  example_visualize_plan.py  gaia_quick_test.py  pyproject.toml  run_gaia.py  run_readme.md  test_extract_answer.py  test_fixed_extraction.py  test_google_api.py  test_response_format.py  visualize_plan.py
.claude/: settings.local.json
app/common/: logger_util.py
app/cosight/agent/actor/: task_actor_agent.py
app/cosight/agent/actor/instance/: actor_agent_instance.py  actor_agent_skill.py
app/cosight/agent/base/: base_agent.py  common_skill.py  skill_to_tool.py  tool_arg_mapping.py
app/cosight/agent/planner/instance/: planner_agent_instance.py  planner_agent_skill.py
app/cosight/agent/planner/prompt/: planner_prompt.py
app/cosight/llm/: chat_llm.py
app/cosight/task/: plan_report_manager.py  task_manager.py  time_record_util.py  todolist.py
app/cosight/tool/: search_toolkit.py
gaia/: GAIA_INTEGRATION_GUIDE.md  GAIA_QUICK_START.md  README.md  VISUALIZATION_GUIDE.md  advanced_gaia_evaluator.py  download_gaia_dataset.py  download_gaia_github.py  gaia_evaluation.py  gaia_quick_start.py  gaia_results_processor.py  install_gaia_dependencies.py  setup_gaia.py  simple_gaia_test.py  test_setup.py  visualize_gaia_plan.py  visualize_plan_only.py
gaia_validation_results/: gaia_results_1761270102.json  gaia_results_1761285116.json  gaia_results_1761290647.json
