[tool.poetry]
name = "cosight"
version = "1.0.0"
description = "CoSight AI Assistant with GAIA Benchmark Integration"
authors = ["CoSight Team"]
readme = "README.md"
packages = [{include = "app"}, {include = "config"}, {include = "cosight_server"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "*"
fastapi = "0.115.12"
bottle = "0.13.2"
requests = "2.32.3"
wheel = "0.45.1"
setuptools = "77.0.3"
mcp = "*"
lagent = "0.2.4"
docx2markdown = "0.1.1"
ffmpeg-python = "0.2.0"
baidusearch = "1.0.3"
retry = "0.9.2"
googlesearch-python = "1.3.0"
browser-use = "0.7.9"
xmltodict = "0.14.2"
soundfile = "0.13.1"
wikipedia = "1.4.0"
seaborn = "0.13.2"
markdown = "3.8"
plotly = "6.0.1"
kaleido = "0.2.1"
websockets = "*"
astor = "0.8.1"
tavily-python = "0.7.2"
python-socks = "*"
markdownify = "*"
minify-html = "*"
# Additional dependencies for GAIA evaluation
pandas = "*"
numpy = "*"
matplotlib = "*"
huggingface-hub = "*"
colorama = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

